--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Глейси</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -11,18 +14,18 @@
     <h2 class="visually-hidden">Секция хедера</h2>
     <div class="container">
       <nav class="main-navigation">
-        <a class="main-header-logo">
+        <a class="main-header-logo" href="#">
           <img src="img/logo.png" width="154" height="64" alt="Глейси">
         </a>
         <ul class="site-navigation">
-          <li><a href="catalog.html">Каталог</a>
+          <li class="navigation-item"><a href="#">Каталог</a>
             <ul class="catalog-list">
               <li class="catalog-list-item">
                 <a class="" href="#">Новинки</a>
               </li>
               <li class="divider"></li>
               <li class="catalog-list-item">
-                <a class="" href="#">Сливочное</a>
+                <a class="" href="catalog.html">Сливочное</a>
               </li>
               <li class="catalog-list-item">
                 <a class="" href="#">Щербеты</a>
@@ -35,14 +38,14 @@
               </li>
             </ul>
           </li>
-          <li><a href="delivery.html">Доставка и оплата</a></li>
-          <li><a href="company.html">О Компании</a></li>
+          <li class="navigation-item"><a href="delivery.html">Доставка и оплата</a></li>
+          <li class="navigation-item"><a href="company.html">О Компании</a></li>
         </ul>
         <ul class="user-navigation">
-          <li><a href="#">Поиск</a>
+          <li class="navigation-item"><a href="#">Поиск</a>
             <input class="search-bar" type="text" name="search" value="" placeholder="Что ищем?">
-          </li>
-          <li><a href="#">Вход</a>
+          </li class="navigation-item">
+          <li class="navigation-item"><a href="#">Вход</a>
             <form class="sign-form" action="https://echo.htmlacademy.ru" method="post">
               <input class="sign-form-email" type="text" name="email" value=""
               placeholder="Электронная почта">
@@ -54,10 +57,10 @@
               <a class="sign-form-link" href="#">Новая регистрация</a>
             </form>
           </li>
-          <li><a href="basket.html">Пусто</a></li>
+          <li class="navigation-item"><a href="basket.html">Пусто</a></li>
         </ul>
-        <p>С 10 до 20, ежедневно</p>
-        <p>8 812 450-25-25</p>
+        <p class="schedule">С 10 до 20, ежедневно</p>
+        <p class="header-tel">8 812 450-25-25</p>
       </nav>
     </div>
   </header>
@@ -100,15 +103,15 @@
       <div class="container">
         <ul class="banner-catalog">
           <li class="banner-item">
-            <h3>Малинка даром!</h3>
-            <p>При покупке 2 кг любого фруктового мороженого,
+            <h3 class="banner-title">Малинка даром!</h3>
+            <p class="banner-text">При покупке 2 кг любого фруктового мороженого,
               добавим в ваш заказ банку малинового варенья бесплатно.
             </p>
             <a class="button banner-button" href="#">Хочу варенье!</a>
           </li>
           <li class="banner-item">
-            <h3>Шоколадки даром!</h3>
-            <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку
+            <h3 class="banner-title">Шоколадки даром!</h3>
+            <p class="banner-text">При покупке 2 кг пломбира, добавим в ваш заказ упаковку
               вкуснейшей шоколадной присыпки совершенно бесплатно.
             </p>
             <a class="button banner-button" href="#">Хочу шоколадки!</a>
@@ -123,27 +126,31 @@
           <li class="hit-item">
             <img src="img/icecream-1.jpg" width="267" height="267" alt="">
             <img class="hit-icon" src="img/hit-icon.svg" width="61" height="61" alt="">
-            <p class="hit-price">310<span class="hit-price-icon">₽/кг</span></p>
+            <p class="hit-price">310<span class="hit-ruble-icon">₽</span><span class=
+            "hit-kg-icon">/кг</span></p>
             <p class="hit-description">Сливочное с апельсиновым джемом и
               цитрусовой стружкой</p>
           </li>
           <li class="hit-item">
             <img src="img/icecream-2.jpg" width="267" height="267" alt="">
             <img class="hit-icon" src="img/hit-icon.svg" width="61" height="61" alt="">
-            <p class="hit-price">380<span class="hit-price-icon">₽/кг</span></p>
+            <p class="hit-price">380<span class="hit-ruble-icon">₽</span><span class=
+              "hit-kg-icon">/кг</span></p>
             <p class="hit-description">Сливочно-кофейное с кусочками шоколада </p>
           </li>
           <li class="hit-item">
             <img src="img/icecream-3.jpg" width="267" height="267" alt="">
             <img class="hit-icon" src="img/hit-icon.svg" width="61" height="61" alt="">
-            <p class="hit-price">355<span class="hit-price-icon">₽/кг</span></p>
+            <p class="hit-price">355<span class="hit-ruble-icon">₽</span><span class=
+            "hit-kg-icon">/кг</span></p>
             <p class="hit-description">Сливочно-клубничное с присыпкой из
               белого шоколада</p>
           </li>
           <li class="hit-item">
             <img src="img/icecream-4.jpg" width="267" height="267" alt="">
             <img class="hit-icon" src="img/hit-icon.svg" width="61" height="61" alt="">
-            <p class="hit-price">415<span class="hit-price-icon">₽/кг</span></p>
+            <p class="hit-price">415<span class="hit-ruble-icon">₽</span><span class=
+            "hit-kg-icon">/кг</span></p>
             <p class="hit-description">Сливочное крем-брюле с карамельной
               подливкой</p>
           </li>
@@ -153,7 +160,7 @@
     <section class="seo">
       <h2 class="visually-hidden">Секция SEO</h2>
       <div class="container">
-        <p>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого
+        <p class="seo-title">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого
           собственного производства на развес</p>
         <ul class="seo-features-list">
           <li class="feature-item">
@@ -194,7 +201,7 @@
         </a>
       </aside>
       <aside class="mailing">
-        <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого
+        <p class="mailing-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого
           вкусного, что у нас происходит. Обещаем не спамить и не слать всякой
           ненужной ерунды. Честно =)
         </p>
@@ -212,12 +219,12 @@
       </div>
       <div class="container">
         <div class="business-card">
-          <p>Адрес главного офиса
+          <p class="card-adresstext">Адрес главного офиса
             и офлайн-магазина:</p>
-          <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
-          <p>Для заказов по телефону:</p>
-          <a class="tel" href="tel:8-812-450-25-25">8 812 450-25-25</a>
-          <p>(с 10 до 20 ежедневно)</p>
+          <p class="card-adress">ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
+          <p class="card-teltext">Для заказов по телефону:</p>
+          <a class="card-tel" href="tel:8-812-450-25-25">8 812 450-25-25</a>
+          <p class="card-schedule">(с 10 до 20 ежедневно)</p>
           <a class="button modal-writeus" href="#">Форма обратной связи</a>
         </div>
       </div>
@@ -259,29 +266,30 @@
       </ul>
       <div class="made-in">
         <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="">
-        <p class="made-in-text">Сделано в HTML Academy © 2019</p>
+        <p class="made-in-text">Сделано в </p>
+        <p class="made-in-htmlacademy">HTML Academy © 2019</p>
       </div>
     </div>
   </footer>
   <div class="modal">
     <div class="container">
-      <div class="modal-title-wrapper ">
-        <h2>Мы обязательно вам ответим!</h2>
+      <div class="modal-title-wrapper">
+        <h2 class="modal-title">Мы обязательно вам ответим!</h2>
         <button class="modal-close" type="button" aria-label="Закрыть форму обратной связи">
           <img src="img/close-cross.svg" width="18" height="17" alt="">
         </button>
       </div>
       <form class="writeus-form" action="https://echo.htmlacademy.ru" method="post">
         <p class="writeus-item">
-          <input id="writeus-name" class="writeus-item-input" type="text" name="name" value=""
+          <input id="writeus-name" class="writeus-item-name" type="text" name="name" value=""
             placeholder="Как вас зовут?">
         </p>
         <p class="writeus-item">
-          <input id="writeus-email" class="writeus-item-input" type="text" name="email" value=""
+          <input id="writeus-email" class="writeus-item-email" type="text" name="email" value=""
             placeholder="Ваша почта для ответа?">
         </p>
         <p class="writeus-item">
-          <input id="writeus-emailtext" class="writeus-item-input" type="text" name="email-text" value=""
+          <input id="writeus-emailtext" class="writeus-item-text" type="text" name="email-text" value=""
             placeholder="Напишите что-нибудь...">
         </p>
         <button class="button writeus-button" type="submit"><span class="button-text">Отправить</span></button>
