--- a/index.html
+++ b/index.html
@@ -47,10 +47,8 @@
           </li class="navigation-item">
           <li class="navigation-item"><a href="#">Вход</a>
             <form class="sign-form" action="https://echo.htmlacademy.ru" method="post">
-              <input class="sign-form-email" type="text" name="email" value=""
-              placeholder="Электронная почта">
-              <input class="sign-form-password" type="text" name="password" value=""
-              placeholder="Пароль">
+              <input class="sign-form-email" type="text" name="email" value="" placeholder="Электронная почта">
+              <input class="sign-form-password" type="text" name="password" value="" placeholder="Пароль">
               <button class="button writeus-button" type="submit">
                 <span class="button-text">Войти</span></button>
               <a class="sign-form-link" href="#">Забыли пароль?</a>
@@ -59,8 +57,10 @@
           </li>
           <li class="navigation-item"><a href="basket.html">Пусто</a></li>
         </ul>
-        <p class="schedule">С 10 до 20, ежедневно</p>
-        <p class="header-tel">8 812 450-25-25</p>
+        <div class="schedule-wrapper">
+          <p class="schedule">С 10 до 20, ежедневно</p>
+          <p class="header-tel">8 812 450-25-25</p>
+        </div>
       </nav>
     </div>
   </header>
@@ -126,31 +126,27 @@
           <li class="hit-item">
             <img src="img/icecream-1.jpg" width="267" height="267" alt="">
             <img class="hit-icon" src="img/hit-icon.svg" width="61" height="61" alt="">
-            <p class="hit-price">310<span class="hit-ruble-icon">₽</span><span class=
-            "hit-kg-icon">/кг</span></p>
+            <p class="hit-price">310<span class="hit-ruble-icon">₽</span><span class="hit-kg-icon">/кг</span></p>
             <p class="hit-description">Сливочное с апельсиновым джемом и
               цитрусовой стружкой</p>
           </li>
           <li class="hit-item">
             <img src="img/icecream-2.jpg" width="267" height="267" alt="">
             <img class="hit-icon" src="img/hit-icon.svg" width="61" height="61" alt="">
-            <p class="hit-price">380<span class="hit-ruble-icon">₽</span><span class=
-              "hit-kg-icon">/кг</span></p>
+            <p class="hit-price">380<span class="hit-ruble-icon">₽</span><span class="hit-kg-icon">/кг</span></p>
             <p class="hit-description">Сливочно-кофейное с кусочками шоколада </p>
           </li>
           <li class="hit-item">
             <img src="img/icecream-3.jpg" width="267" height="267" alt="">
             <img class="hit-icon" src="img/hit-icon.svg" width="61" height="61" alt="">
-            <p class="hit-price">355<span class="hit-ruble-icon">₽</span><span class=
-            "hit-kg-icon">/кг</span></p>
+            <p class="hit-price">355<span class="hit-ruble-icon">₽</span><span class="hit-kg-icon">/кг</span></p>
             <p class="hit-description">Сливочно-клубничное с присыпкой из
               белого шоколада</p>
           </li>
           <li class="hit-item">
             <img src="img/icecream-4.jpg" width="267" height="267" alt="">
             <img class="hit-icon" src="img/hit-icon.svg" width="61" height="61" alt="">
-            <p class="hit-price">415<span class="hit-ruble-icon">₽</span><span class=
-            "hit-kg-icon">/кг</span></p>
+            <p class="hit-price">415<span class="hit-ruble-icon">₽</span><span class="hit-kg-icon">/кг</span></p>
             <p class="hit-description">Сливочное крем-брюле с карамельной
               подливкой</p>
           </li>
@@ -193,25 +189,29 @@
     </section>
     <section class="blog-mailing">
       <h2 class="visually-hidden">Секция новостей и подписки</h2>
-      <aside class="blog-news">
-        <p class="blog-title">Новое в нашем блоге</p>
-        <a class="blog-news-title" href="#">10 способов сервировки
-          фруктовых щербетов к
-          столу
-        </a>
-      </aside>
-      <aside class="mailing">
-        <p class="mailing-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого
-          вкусного, что у нас происходит. Обещаем не спамить и не слать всякой
-          ненужной ерунды. Честно =)
-        </p>
-        <form class="mailing-signup">
-          <label for="mailing-email"></label>
-          <input id="mailing-email" class="mailing-signup-input" type="text" name="email"
-            placeholder="Электронная почта">
-          <button class="button mailing-button">Отправить</button>
-        </form>
-      </aside>
+      <div class="container">
+        <div class="blog-list">
+          <aside class="blog-news">
+            <p class="blog-title">Новое в нашем блоге</p>
+            <a class="blog-news-title" href="#">10 способов сервировки
+              фруктовых щербетов к
+              столу
+            </a>
+          </aside>
+          <aside class="mailing">
+            <p class="mailing-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого
+              вкусного, что у нас происходит. Обещаем не спамить и не слать всякой
+              ненужной ерунды. Честно =)
+            </p>
+            <form class="mailing-signup">
+              <label for="mailing-email"></label>
+              <input id="mailing-email" class="mailing-signup-input" type="text" name="email"
+                placeholder="Электронная почта">
+              <button class="button mailing-button">Отправить</button>
+            </form>
+          </aside>
+        </div>
+      </div>
     </section>
     <section class="contacts">
       <h2 class="visually-hidden">Секция контактов</h2>
@@ -231,7 +231,7 @@
     </section>
   </main>
   <footer class="main-footer">
-    <div class="container">
+    <div class="container container-spacebetween">
       <ul class="social-button-list">
         <li class="social-button-container">
           <a class="social-button" href="#">
