--- a/catalog.html
+++ b/catalog.html
@@ -81,21 +81,29 @@
             </div>
           </li>
         </ul>
-        <p>С 10 до 20, ежедневно</p>
-        <p>8 812 450-25-25</p>
       </nav>
+      <div class="schedule-card">
+        <p class="schedule">С 10 до 20, ежедневно</p>
+        <p class="header-tel">8 812 450-25-25</p>
+      </div>
     </div>
   </header>
   <main>
     <section class="breadcrumbs">
-      <h2 class="visually-hidden">Секция указателя</h2>
-      <ul class="breadcrumbs-list">
-        <li class="breadcrumbs-item">Главная</li>
-        <li class="breadcrumbs-item">Каталог</li>
-        <li class="breadcrumbs-item">Сливочное</li>
+      <div class="container">
+        <h2 class="visually-hidden">Секция указателя</h2>
+        <ul class="breadcrumbs-list">
+          <li class="breadcrumbs-item">Главная</li>
+          <li class="breadcrumbs-item">Каталог</li>
+          <li class="breadcrumbs-item">Сливочное</li>
+      </div>
       </ul>
     </section>
-    <h2 class="site-title">Сливочное мороженое</h2>
+    <section class="site-title">
+      <div class="container">
+        <h2 class="site-text">Сливочное мороженое</h2>
+      </div>
+    </section>
     <section class="filters">
       <h2 class="visually-hidden">Секция фильтров</h2>
       <div class="container">
@@ -199,95 +207,121 @@
       <h2 class="visually-hidden">Секция товаров</h2>
       <div class="container">
         <ul class="goods-list">
-          <li class="good-item"><img src="#" alt="">
-            <img src="img/icecream-1.jpg" width="267" height="267" alt="">
-            <p class="hit-price">310<span class="hit-price-icon">₽/кг</span></p>
-            <p class="hit-description">Сливочное с апельсиновым джемом и
+          <li class="good-item">
+            <img class="icecream-image" src="img/icecream-1.jpg" width="267" height="267" alt="">
+            <div class="price-tag">
+              <p class="hit-price">310<span class="hit-price-icon">₽/кг</span></p>
+            </div>
+            <p class="hit-text">Сливочное с апельсиновым джемом и
               цитрусовой стружкой</p>
           </li>
           <li class="good-item">
-            <img src="img/icecream-2.jpg" width="267" height="267" alt="">
-            <p class="hit-price">380<span class="hit-price-icon">₽/кг</span></p>
-            <p class="hit-description">Сливочно-кофейное с кусочками шоколада</p>
+            <img class="icecream-image" src="img/icecream-2.jpg" width="267" height="267" alt="">
+            <div class="price-tag">
+              <p class="hit-price">380<span class="hit-price-icon">₽/кг</span></p>
+            </div>
+            <p class="hit-text">Сливочно-кофейное с кусочками шоколада</p>
           </li>
           <li class="good-item">
-            <img src="img/icecream-3.jpg" width="267" height="267" alt="">
-            <p class="hit-price">355<span class="hit-price-icon">₽/кг</span></p>
-            <p class="hit-description">Сливочно-клубничное с присыпкой из белого шоколада</p>
+            <img class="icecream-image" src="img/icecream-3.jpg" width="267" height="267" alt="">
+            <div class="price-tag">
+              <p class="hit-price">355<span class="hit-price-icon">₽/кг</span></p>
+            </div>
+            <p class="hit-text">Сливочно-клубничное с присыпкой из белого шоколада</p>
           </li>
           <li class="good-item">
-            <img src="img/icecream-4.jpg" width="267" height="267" alt="">
-            <p class="hit-price">415<span class="hit-price-icon">₽/кг</span></p>
-            <p class="hit-description">Сливочное крем-брюле с карамельной подливкой</p>
+            <img class="icecream-image" src="img/icecream-4.jpg" width="267" height="267" alt="">
+            <div class="price-tag">
+              <p class="hit-price">415<span class="hit-price-icon">₽/кг</span></p>
+            </div>
+            <p class="hit-text">Сливочное крем-брюле с карамельной подливкой</p>
           </li>
           <li class="good-item">
-            <img src="img/icecream-5.jpg" width="267" height="267" alt="">
-            <p class="hit-price">325<span class="hit-price-icon">₽/кг</span></p>
-            <p class="hit-description">Сливочное с брусничным джемом</p>
+            <img class="icecream-image" src="img/icecream-5.jpg" width="267" height="267" alt="">
+            <div class="price-tag">
+              <p class="hit-price">325<span class="hit-price-icon">₽/кг</span></p>
+            </div>
+            <p class="hit-text">Сливочное с брусничным джемом</p>
           </li>
           <li class="good-item">
-            <img src="img/icecream-6.jpg" width="267" height="267" alt="">
-            <p class="hit-price">410<span class="hit-price-icon">₽/кг</span></p>
-            <p class="hit-description">Сливочно-черничное с цельными ягодами черники</p>
+            <img class="icecream-image" src="img/icecream-6.jpg" width="267" height="267" alt="">
+            <div class="price-tag">
+              <p class="hit-price">410<span class="hit-price-icon">₽/кг</span></p>
+            </div>
+            <p class="hit-text">Сливочно-черничное с цельными ягодами черники</p>
           </li>
           <li class="good-item">
-            <img src="img/icecream-7.jpg" width="267" height="267" alt="">
-            <p class="hit-price">375<span class="hit-price-icon">₽/кг</span></p>
-            <p class="hit-description">Сливочно-лимонное с карамельной присыпкой</p>
+            <img class="icecream-image" src="img/icecream-7.jpg" width="267" height="267" alt="">
+            <div class="price-tag">
+              <p class="hit-price">375<span class="hit-price-icon">₽/кг</span></p>
+            </div>
+            <p class="hit-text">Сливочно-лимонное с карамельной присыпкой</p>
           </li>
           <li class="good-item">
-            <img src="img/icecream-8.jpg" width="267" height="267" alt="">
-            <p class="hit-price">320<span class="hit-price-icon">₽/кг</span></p>
-            <p class="hit-description">Сливочное с шоколадной стружкой</p>
+            <img class="icecream-image" src="img/icecream-8.jpg" width="267" height="267" alt="">
+            <div class="price-tag">
+              <p class="hit-price">320<span class="hit-price-icon">₽/кг</span></p>
+            </div>
+            <p class="hit-text">Сливочное с шоколадной стружкой</p>
           </li>
           <li class="good-item">
-            <img src="img/icecream-9.jpg" width="267" height="267" alt="">
-            <p class="hit-price">440<span class="hit-price-icon">₽/кг</span></p>
-            <p class="hit-description">Сливочно-ванильное с кусочками шоколада</p>
+            <img class="icecream-image" src="img/icecream-9.jpg" width="267" height="267" alt="">
+            <div class="price-tag">
+              <p class="hit-price">440<span class="hit-price-icon">₽/кг</span></p>
+            </div>
+            <p class="hit-text">Сливочно-ванильное с кусочками шоколада</p>
           </li>
           <li class="good-item">
-            <img src="img/icecream-10.jpg" width="267" height="267" alt="">
-            <p class="hit-price">435<span class="hit-price-icon">₽/кг</span></p>
-            <p class="hit-description">Сливочноe с ментоловым сиропом </p>
+            <img class="icecream-image" src="img/icecream-10.jpg" width="267" height="267" alt="">
+            <div class="price-tag">
+              <p class="hit-price">435<span class="hit-price-icon">₽/кг</span></p>
+            </div>
+            <p class="hit-text">Сливочноe с ментоловым сиропом </p>
           </li>
           <li class="good-item">
-            <img src="img/icecream-11.jpg" width="267" height="267" alt="">
-            <p class="hit-price">355<span class="hit-price-icon">₽/кг</span></p>
-            <p class="hit-description">Сливочное с кусочками черного шоколада</p>
+            <img class="icecream-image" src="img/icecream-11.jpg" width="267" height="267" alt="">
+            <div class="price-tag">
+              <p class="hit-price">355<span class="hit-price-icon">₽/кг</span></p>
+            </div>
+            <p class="hit-text">Сливочное с кусочками черного шоколада</p>
           </li>
           <li class="good-item">
-            <img src="img/icecream-12.jpg" width="267" height="267" alt="">
-            <p class="hit-price">420<span class="hit-price-icon">₽/кг</span></p>
-            <p class="hit-description">Сливочное с мятным сиропом</p>
+            <img class="icecream-image" src="img/icecream-12.jpg" width="267" height="267" alt="">
+            <div class="price-tag">
+              <p class="hit-price">420<span class="hit-price-icon">₽/кг</span></p>
+            </div>
+            <p class="hit-text">Сливочное с мятным сиропом</p>
           </li>
         </ul>
       </div>
     </section>
     <div class="pagination">
-      <ul class="pagination-list">
-        <li>
-          <a class="pagination-item pagination-item-current" href="#" aria-label="Текущая страница">1</a>
-        </li>
-        <li>
-          <a class="pagination-item" href="#" aria-label="Перейти на вторую страницу">2</a>
-        </li>
-        <li>
-          <a class="pagination-item" href="#" aria-label="Перейти на третью страницу">3</a>
-        </li>
-        <li>
-          <a class="pagination-item" href="#" aria-label="Перейти на четвертую страницу">4</a>
-        </li>
-        <li>
-          <a class="pagination-item" href="#" aria-label="Перейти на пятую страницу">5</a>
-        </li>
-        <li>
-          <a class="pagination-item" href="#" aria-label="Перейти на следующую страницу">Следующая</a>
-        </li>
-      </ul>
+      <div class="container">
+        <ul class="pagination-list">
+          <li class="pagination-cover">
+            <a class="pagination-item pagination-item-current" href="#" aria-label="Текущая страница">1</a>
+          </li>
+          <li class="pagination-cover">
+            <a class="pagination-item" href="#" aria-label="Перейти на вторую страницу">2</a>
+          </li>
+          <li class="pagination-cover">
+            <a class="pagination-item" href="#" aria-label="Перейти на третью страницу">3</a>
+          </li>
+          <li class="pagination-cover">
+            <a class="pagination-item" href="#" aria-label="Перейти на четвертую страницу">4</a>
+          </li>
+          <li class="pagination-cover">
+            <a class="pagination-item" href="#" aria-label="Перейти на пятую страницу">5</a>
+          </li>
+          <li class="pagination-cover">
+            <a class="pagination-item" href="#" aria-label="Перейти на следующую страницу">Следующая</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </main>
   <footer class="main-footer">
-    <div class="container">
+    <div class="container container-spacebetween">
       <ul class="social-button-list">
         <li class="social-button-container">
           <a class="social-button" href="#">
@@ -322,7 +356,9 @@
       </ul>
       <div class="made-in">
         <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="">
-        <p class="made-in-text">Сделано в HTML Academy © 2019</p>
+        <p class="made-in-text">Сделано в
+          <span class="made-in-htmlacademy">HTML Academy © 2019</span>
+        </p>
       </div>
     </div>
   </footer>
